Test JDK 24-ea beta 24