@@ -144,7 +144,7 @@
     </scm>
 
     <properties>
-        <project.build.targetJdk>23</project.build.targetJdk>
+        <project.build.targetJdk>24</project.build.targetJdk>
         <!-- for reproducible build support, updated by release plugin -->
         <project.build.outputTimestamp>2024-10-30T23:43:31Z</project.build.outputTimestamp>
         <!-- TODO remove this property when no module overrides it -->
@@ -153,7 +153,7 @@
         <air.check.skip-spotbugs>true</air.check.skip-spotbugs>
         <air.check.skip-pmd>true</air.check.skip-pmd>
         <air.check.skip-jacoco>true</air.check.skip-jacoco>
-        <air.java.version>23.0.0</air.java.version>
+        <air.java.version>24</air.java.version>
         <air.javadoc.lint>syntax,reference,html,-missing</air.javadoc.lint>
         <air.modernizer.java-version>8</air.modernizer.java-version>
         <air.release.preparation-goals>clean verify -DskipTests</air.release.preparation-goals>
@@ -176,8 +176,6 @@
             <!-- # Allow loading dynamic agent used by JOL -->
             -XX:+EnableDynamicAgentLoading
             ${extraJavaVectorArgs}
-            <!-- # https://bugs.openjdk.org/browse/JDK-8327134 -->
-            -Djava.security.manager=allow
         </air.test.jvm.additional-arguments.default>
         <air.test.jvm.additional-arguments>${air.test.jvm.additional-arguments.default}</air.test.jvm.additional-arguments>
 
